--- a/rohitsnote.css
+++ b/rohitsnote.css
@@ -18,7 +18,7 @@ margin:0px;
 color: #FFFFFF;
 text-align: center;
 font-size: 20px;
-  font-family: 'Andika';
+  font-family: Arial;
 }
 body{
   background-image: url("https://rohitsnote.github.io/sky.png");
