--- a/rohitsnote.css
+++ b/rohitsnote.css
@@ -30,12 +30,10 @@ body{
 }
 }
 div {
-  background: rgb(87, 133, 192);
-  padding: 10px;
-}
-
-div.first {
-  background: rgba(87, 133, 192, 0.5);
+  background-color: 	rgba(51, 51, 53,0.3);
+  width: 300px;
+  padding: 50px;
+  margin: 20px;
 }
 pre{
   line-height:1.8;
