--- a/rohitsnote.css
+++ b/rohitsnote.css
@@ -29,7 +29,7 @@ body{
   background-size:100% 100%;
 }
 }
-.center  {
+div {
   background-color: 	rgba(51, 51, 53,0.3);
   width: 300px;
   padding: 50px;
