--- a/rohitsnote.css
+++ b/rohitsnote.css
@@ -32,8 +32,12 @@ body{
 div {
   background-color: 	rgba(51, 51, 53,0.3);
   width: 300px;
-  padding: 50px;
-  margin: 20px;
+  padding: 40px;
+  margin-top:0px;
+  margin-bottom:0px;
+  margin-left:auto;
+  margin-right:auto;
+  
 }
 pre{
   line-height:1.8;
