--- a/rohitsnote.css
+++ b/rohitsnote.css
@@ -13,7 +13,7 @@ font-weight:bold;
 body{
 background-repeat: no-repeat;
 background-attachment: fixed;
-background-color:#5785c0;
+background-color:#333335;
 margin:0px;
 color: #FFFFFF;
 text-align: center;
