--- a/rohitsnote.css
+++ b/rohitsnote.css
@@ -31,7 +31,7 @@ body{
 }
 div {
   background-color: 	rgba(51, 51, 53,0.3);
-  width: auto;
+  width: 300px;
   padding: auto;
   margin-top:0px;
   margin-bottom:0px;
