--- a/rohitsnote.css
+++ b/rohitsnote.css
@@ -31,8 +31,8 @@ body{
 }
 div {
   background-color: 	rgba(51, 51, 53,0.3);
-  width: 300px;
-  padding: auto;
+  width: auto;
+  padding: 50px;
   margin-top:0px;
   margin-bottom:0px;
   margin-left:auto;
