--- a/rohitsnote.css
+++ b/rohitsnote.css
@@ -32,7 +32,8 @@ body{
 div {
   background-color: 	rgba(51, 51, 53,0.3);
   width: auto;
-  padding: 50px;
+  padding-left: 10px;
+  padding-right: 10px;
   margin-top:0px;
   margin-bottom:0px;
   margin-left:auto;
