--- a/rohitsnote.css
+++ b/rohitsnote.css
@@ -31,9 +31,8 @@ body{
 }
 div {
   background-color: 	rgba(51, 51, 53,0.3);
-  width: auto;
-  padding-left: 10px;
-  padding-right: 10px;
+  width: inherit;
+  padding-left: auto;
   margin-top:0px;
   margin-bottom:0px;
   margin-left:auto;
