--- a/rohitsnote.css
+++ b/rohitsnote.css
@@ -31,7 +31,7 @@ body{
 }
 div {
   background-color: 	rgba(51, 51, 53,0.3);
-  width: inherit;
+  width: auto;
   padding-left: auto;
   margin-top:0px;
   margin-bottom:0px;
@@ -43,6 +43,7 @@ pre{
   line-height:1.8;
   white-space: pre-wrap;
   font-family: Arial;
+  padding:10px;
 }
 a:link {
   color: #FFFFFF;
