--- a/rohitsnote.css
+++ b/rohitsnote.css
@@ -44,7 +44,7 @@ pre{
   line-height:1.8;
   white-space: pre-wrap;
   font-family: Arial;
-  padding:10px;
+  margin-left:1000px;
 }
 a:link {
   color: #FFFFFF;
