--- a/rohitsnote.css
+++ b/rohitsnote.css
@@ -32,8 +32,7 @@ body{
 div {
   background-color: 	rgba(51, 51, 53,0.3);
   white-space:pre-wrap;
-  width: auto;
-  padding-left: auto;
+  max-width:500px;
   margin-top:0px;
   margin-bottom:0px;
   margin-left:auto;
