--- a/rohitsnote.css
+++ b/rohitsnote.css
@@ -43,7 +43,7 @@ pre{
   line-height:1.8;
   white-space: pre-wrap;
   font-family: Arial;
-padding:0px
+margin-top:0px;
 }
 a:link {
   color: #FFFFFF;
