--- a/rohitsnote.css
+++ b/rohitsnote.css
@@ -33,6 +33,7 @@ div {
   background-color: 	rgba(51, 51, 53,0.3);
   white-space:pre-wrap;
   max-width:500px;
+  padding:auto;
   margin-top:0px;
   margin-bottom:0px;
   margin-left:auto;
